# pcpred

./: .gitignore  CMakeLists.txt  README.md  mainpage.dox  manifest.xml
config/: planning.yaml
data/: .gitignore  human.txt  human_upper_body.txt
data/bag/: camera_info.txt  record.sh
data/bvh/: pulling_lever.bvh  talking.bvh  talking.bvh~  walking.bvh~  walking_inPlace.bvh  waving.bvh~
data/bvh/with_fingers/: walking.bvh
data/human/: C1.txt  C10.txt  C2.txt  C3.txt  C4.txt  C8.txt  C9.txt  D1.txt  D6.txt  S1.txt  default.txt
data/mdp/: learning_options.txt  qlearning.txt
include/pcpred/: pcpred.h
include/pcpred/detection/: depth_frame_human_detector.h  pointcloud_human_detector.h
include/pcpred/feature/: curve_fitting.h  feature.h  hermite_curve.h  human_motion_feature.h  stream_curve_fitting.h
include/pcpred/gaussian_process/: gpr.h  gpr_multivariate.h  gpr_univariate.h
include/pcpred/import/: bvh_importer.h  gvv_data_importer.h  openni_importer.h  openni_subscriber.h
include/pcpred/kalman_filter/: point_obstacle_kf.h
include/pcpred/learning/: benchmark_generator.h  future_motion.h  hierarchical_kmeans.h  ivm.h  kmeans.h  learning_motion.h  motion_predictor.h  qlearning.h
include/pcpred/pointcloud/: pointcloud.h
include/pcpred/prediction/: bvh_predictor.h  gvv_predictor.h  kinect_predictor.h  point_predictor.h  pointcloud_human_predictor.h  pointcloud_predictor.h  points_predictor.h
include/pcpred/shape/: human.h
include/pcpred/util/: chi_square.h  eigenmvn.h  gaussian_quadrature.h  logger.h  singleton.h
include/pcpred/visualization/: marker_array_visualizer.h  marker_visualizer.h  pointcloud_visualizer.h  visualizer.h
launch/: curve_fitting.launch  demo.launch  gpr.launch  kuka_iiwa.launch  motion.launch  moveit.rviz  pcpred.launch  test.launch  test.rviz  test_bvh.launch  test_gvv.launch  world_tf.launch
launch/rviz/: curve_fitting.rviz  demo.rviz  gpr.rviz  kuka_iiwa.rviz  motion.rviz  pcpred.rviz  test.rviz  test_bvh.rviz  test_gvv.rviz
src/: app.cpp  demo.cpp  figures.cpp  learn_motion.cpp  motion_planner.cpp  openni_recorder.cpp  playback.cpp  task_planner.cpp  test_bvh_import.cpp  test_bvh_prediction.cpp  test_curve_fitting.cpp  test_gpr_curves.cpp  test_gpr_tutorial.cpp  test_gvvdata_import.cpp  test_gvvdata_prediction.cpp  test_hierarchical_kmeans.cpp  test_human_motion.cpp  test_kinect_prediction.cpp  test_openni_playback.cpp  test_openni_subscriber.cpp  test_point_prediction.cpp  test_pointcloud_detection.cpp  test_pointcloud_prediction.cpp  test_prediction.cpp
src/detection/: depth_frame_human_detector.cpp  pointcloud_human_detector.cpp
src/feature/: curve_fitting.cpp  feature.cpp  hermite_curve.cpp  human_motion_feature.cpp  stream_curve_fitting.cpp
src/gaussian_process/: gpr.cpp  gpr_multivariate.cpp  gpr_univariate.cpp
src/import/: bvh_importer.cpp  gvv_data_importer.cpp  openni_importer.cpp  openni_subscriber.cpp
src/kalman_filter/: point_obstacle_kf.cpp
src/learning/: benchmark_generator.cpp  future_motion.cpp  hierarchical_kmeans.cpp  ivm.cpp  kmeans.cpp  learning_motion.cpp  motion_predictor.cpp  qlearning.cpp
src/pointcloud/: pointcloud.cpp
src/prediction/: bvh_predictor.cpp  gvv_predictor.cpp  kinect_predictor.cpp  point_predictor.cpp  pointcloud_human_predictor.cpp  pointcloud_predictor.cpp  points_predictor.cpp
src/shape/: human.cpp
src/util/: chi_square.cpp  gaussian_quadrature.cpp
src/visualization/: marker_array_visualizer.cpp  marker_visualizer.cpp  pointcloud_visualizer.cpp  visualizer.cpp
